deployments-2/api/lh-practice-api/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspracticeapi
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host:
      http:
        paths:
         - path: /practice-api
           pathType: Prefix
           backend:
             service:
              name: servicepracticeapi
              port:
                number: 80
